// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid feedback 1`] = `
Array [
  <div
    className="invalid-feedback"
>
    Username is required!
</div>,
  <div
    className="invalid-feedback"
>
    Password is required.
</div>,
  <div
    className="invalid-feedback"
>
    Password confirmation is required!
</div>,
  <div
    className="invalid-feedback"
>
    E-mail is required.
</div>,
]
`;

exports[`ivalid email and password 1`] = `
Array [
  <div
    className="invalid-feedback"
>
    Username is required!
</div>,
  <div
    className="invalid-feedback"
>
    Passwords don't match!
</div>,
  <div
    className="invalid-feedback"
>
    Please input a valid email address.
</div>,
]
`;
